--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,12 +6,20 @@ jobs:
   job1:
     runs-on: windows-latest
     steps:
-      - name: pulling git repo
-        uses: actions/checkout@v2
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
       - name: Install Python
         uses: actions/setup-python@v5
         with:
-          python-version: '3.13' 
-      - run: python my_script.py
-      - name: Installing dependencies
+          python-version: '3.12'  # Use the latest stable version
+
+      - name: Upgrade pip
+        run: python -m pip install --upgrade pip
+
+      - name: Install dependencies
         run: pip install -r requirements.txt
+
+      - name: Run Python script
+        run: python my_script.py
+
