--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,14 +12,18 @@ jobs:
       - name: Install Python
         uses: actions/setup-python@v5
         with:
-          python-version: '3.12'  # Use the latest stable version
+          python-version: '3.12'  # Use stable Python version
+
+      - name: Install Rust (for orjson)
+        run: |
+          rustup update
+          rustup default stable
 
       - name: Upgrade pip
         run: python -m pip install --upgrade pip
 
       - name: Install dependencies
-        run: pip install -r requirements.txt
+        run: pip install --no-cache-dir -r requirements.txt  # Avoid caching issues
 
       - name: Run Python script
         run: python my_script.py
-
