--- a/.github/marketplace/build-deploy.yml
+++ b/.github/marketplace/build-deploy.yml
@@ -6,10 +6,24 @@ jobs:
   job1:
     runs-on: windows-latest
     steps:
-      - name: pulling git repo
-        uses: actions/checkout@v2
-      - name: Hello World
-        run: Write-Output "Hello World"
-        shell: pwsh
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-  
+      - name: Install Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.12'  # Use stable Python version
+
+      - name: Install Rust (for orjson)
+        run: |
+          rustup update
+          rustup default stable
+
+      - name: Upgrade pip
+        run: python -m pip install --upgrade pip
+
+      - name: Install dependencies
+        run: pip install --no-cache-dir -r requirements.txt  # Avoid caching issues
+
+      - name: Run Python script
+        run: python my_script.py
